--- a/css/global.css
+++ b/css/global.css
@@ -1,12 +1,13 @@
 @import "reset.css";
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&family=Lato&display=swap");
 
 /* Global */
 :root {
-  --color-primary: #afb4bd;
-  --color-secondary: #9d7cd8;
-  --color-highlight: #fddef9;
+  --color-primary: #2a4b73ed;
+  --color-secondary: #1c324d;
+  --color-highlight: #cc0043;
   --color-dark: #485161;
-  --color-bg: #1f2335;
+  --color-bg: #cab39a38;
   --size-step-0: clamp(1rem, calc(0.96rem + 0.22vw), 1.13rem);
   --size-step-1: clamp(1.25rem, calc(1.16rem + 0.43vw), 1.5rem);
   --size-step-2: clamp(1.56rem, calc(1.41rem + 0.76vw), 2rem);
@@ -17,14 +18,15 @@
 body {
   background: var(--color-bg);
   color: var(--color-primary);
-  font-family: Georgia, serif;
+  font-family: "Merriweather", "Garamond", "Georgia", serif;
   font-size: var(--size-step-0);
   line-height: 1.7;
   display: flex;
+  flex-direction: column;
 }
 
 h1, h2, h3 {
-  font-family: Inter, sans-serif;
+  font-family: "Merriweather", "Garamond", "Georgia", serif; 
   font-weight: 800;
   line-height: 1.1;
   color: var(--color-secondary);
@@ -42,13 +44,17 @@ h3 {
   font-size: var(--size-step-2);
 }
 
+img:not([alt]) {
+  filter: blur(10px);
+}
+
 /* Utilities */
 .flow > * + * {
   margin-top: var(--flow-space, 1em);
 }
 
 .wrapper {
-  max-width: 75rem;
+  max-width: 75ch;
   margin-left: auto;
   margin-right: auto;
   padding: 0 1rem;
@@ -57,3 +63,50 @@ h3 {
 .text-highlight {
   color: var(--color-highlight);
 }
+
+.grid {
+  display: grid;
+  grid-gap: 1rem;
+}
+
+@supports (width: min(250px, 100%)) {
+  .grid {
+    grid-template-columns: repeat(auto-fit, minmax(min(280px, 100%), 1fr));
+  }
+}
+
+.card {
+  --flow-space: 0.2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.center-text {
+  text-align: center;
+ }
+
+ .header__inner {
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+   justify-content: space-between;
+ }
+
+ .header__navigation {
+   padding: 1rem 0;
+ }
+
+ .nav {
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+   margin: 0;
+   gap: 0 clamp(1.09rem, 1rem + 0.47vw, 1.33rem);
+ }
+
+ .nav-link {
+   text-decoration: underline;
+   font-weight: bold;
+   color: currentColor;
+ }
